--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,12 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Qt
-      uses: jurplel/install-qt-action@v4
-      with:
-        version: '6.8.3'  # или нужная версия
-        host: 'windows'
-        target: 'desktop'
-        arch: 'win64_msvc2022_64'
+      run: |
+        pip install aqtinstall
+        aqt install-qt windows desktop 6.8.3 win64_mingw --outputdir ${{ github.workspace }}/Qt
 
     - name: Configure with qmake
-      run: qmake src/kurs.pro
+      run: ${{ github.workspace }}/Qt/6.8.3/mingw_64/bin/qmake src/kurs.pro
 
     - name: Build with make
       run: |
