--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Build with mingw32-make
       run: mingw32-make
 
-    - name: List build output
-      run: |
-        Get-ChildItem -Recurse
+    #- name: List build output
+    #  run: |
+    #    Get-ChildItem -Recurse
 
     # Optional: Deploy with windeployqt (requires Qt tools in PATH)
     # - name: Deploy with windeployqt
@@ -48,5 +48,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: kurs-windows
-        path: src/release/
-
+        path: release/
